max-height and error message on mobile fix

--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -108,3 +108,9 @@
     @content;
   }
 }
+
+@mixin media-horizontal($height) {
+  @media (max-height: #{$height}) {
+    @content;
+  }
+}
